--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-.DS_Store
+.DS_Store src/.DS_Store src/assets/.DS_Store src/assets/icons/.DS_Store src/components/.DS_Store src/containers/.DS_Store
